# TradingAgents

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
src/tradingagents/: __init__.py  async_utils.py  config.py  default_config.py  logging.py
src/tradingagents/agents/: __init__.py
src/tradingagents/agents/analysts/: fundamentals_analyst.py  market_analyst.py  news_analyst.py  social_media_analyst.py
src/tradingagents/agents/managers/: research_manager.py  risk_manager.py
src/tradingagents/agents/risk_mgmt/: aggresive_debator.py  conservative_debator.py  neutral_debator.py
src/tradingagents/agents/utils/: agent_states.py  agent_utils.py  memory.py  news_data_tools.py  technical_indicators_tools.py
src/tradingagents/backtesting/: __init__.py  backtester.py  metrics.py  portfolio.py
src/tradingagents/cli/: main.py  utils.py
src/tradingagents/cli/static/: welcome.txt
src/tradingagents/dataflows/: alpha_vantage.py  alpha_vantage_common.py  alpha_vantage_fundamentals.py  alpha_vantage_indicator.py  config.py  google.py  googlenews_utils.py  interface.py  local.py  openai.py  reddit_utils.py  stockstats_utils.py  utils.py  y_finance.py  yfin_utils.py
src/tradingagents/graph/: propagation.py  reflection.py  setup.py  trading_graph.py
tests/: __init__.py  conftest.py  test_async.py  test_backtesting.py  test_conditional_logic.py  test_config.py  test_dataflows_config.py  test_dataflows_interface.py  test_graph.py  test_integration.py  test_memory.py  test_pydantic_config.py  test_signal_processing.py
