[project]
name = "tradingagents"
version = "0.2.0"
description = "Multi-Agent LLM Financial Trading Framework"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "TradingAgents Team", email = "yijia.xiao@cs.ucla.edu" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
keywords = ["trading", "finance", "llm", "agents", "langgraph"]

dependencies = [
    # LangChain ecosystem
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-google-genai>=2.0.0",

    # Data sources
    "yfinance>=0.2.40",
    "alpha-vantage>=3.0.0",
    "praw>=7.7.0",
    "feedparser>=6.0.0",

    # Data processing
    "pandas>=2.0.0",
    "stockstats>=0.6.0",

    # Vector store / memory
    "chromadb>=0.5.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
tradingagents = "tradingagents.cli.main:app"

[project.urls]
Homepage = "https://github.com/TauricResearch/TradingAgents"
Repository = "https://github.com/TauricResearch/TradingAgents"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tradingagents"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TC",     # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["tradingagents"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
